# heather-the-kitty

./: Cargo.toml  Config.toml  README.md
src/: commands.rs  config.rs  database.rs  error.rs  events.rs  lib.rs  main.rs  prelude.rs  queries.rs
src/commands/: mod.rs
src/config/: mod.rs
src/events/: mod.rs
src/events/commands/: focus.rs  focus_channel.rs  hug.rs  ignore.rs  ignore_channel.rs  ignored_channels.rs  is_ignored.rs  mod.rs  pat.rs  response.rs  scratch.rs
src/events/commands/cat_stuff/: cuddle.rs  mod.rs  pet.rs
src/events/reactions/: image.rs  mod.rs  sound.rs
src/utils/: mod.rs
