[package]
name = "cat-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] } 
tokio = { version = "1.0", features = ["rt-multi-thread"] }
serde = { version = "1.0.159", features = ["serde_derive"] }
thiserror = "1.0.40"
toml = "0.7.3"
rand = "0.8.5"
log = "0.4.17"
env_logger = "0.10.0"
