[package]
name = "new-heather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
dotenv = "0.15.0"
env = "0.0.0"
env_logger = "0.10.0"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_toml = "0.0.1"
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] } 
sqlx = { version = "0.7.2", features = ["mysql", "runtime-tokio-native-tls"] }
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
toml = "0.7.6"
